--- a/go/go.html
+++ b/go/go.html
@@ -29,7 +29,7 @@
 
   <div class="container">
     <div class="m-5 p-5 title">
-      <h1>围棋</h1>
+      <h1>围棋方圆</h1>
       <div class="text-muted">更新中</div>
     </div>
 
@@ -49,7 +49,7 @@
         data: () => {
           var news = bao.go.news.slice();
           news.forEach(e => {
-            e.link = `../${e.link}`;
+            e.url = `../${e.url}`;
           });
           return { news: news };
         }
