--- a/books/agsinst_gods/ag.html
+++ b/books/agsinst_gods/ag.html
@@ -27,7 +27,7 @@
 
   <div class="container">
 
-  <div class="m-3 p-3 title">
+  <div class="title">
     <h1>Against the Gods</h1>
     <div class="text-muted">The Remarkable Story of Risk</div>
     <div class="author">彼得·伯恩斯坦 (Peter L. Bernstein, 1919--2009)</div>
