--- a/books/economics_one_lesson/eol.html
+++ b/books/economics_one_lesson/eol.html
@@ -27,7 +27,7 @@
 
   <div class="container">
 
-  <div class="m-3 p-3 title">
+  <div class="title">
     <h1>Economics in One Lesson</h1>
     <div class="author">赫兹利特 (Henry S. Hazlitt, 1894--1993)</div>
   </div>
