--- a/books/elements_style/eos.html
+++ b/books/elements_style/eos.html
@@ -27,7 +27,7 @@
 
   <div class="container">
 
-  <div class="m-3 p-3 title">
+  <div class="title">
     <h1>The Elements of Style</h1>
     <div class="author">William Strunk Jr., E.B. White</div>
   </div>
