--- a/books/guwen/gw.html
+++ b/books/guwen/gw.html
@@ -27,7 +27,7 @@
 
   <div class="container">
 
-  <div class="m-3 p-3 title">
+  <div class="title">
     <h1>古文观止</h1>
     <div class="author">吴楚才 吴调侯 编</div>
   </div>
