--- a/books/intelligent_investor/ii.html
+++ b/books/intelligent_investor/ii.html
@@ -30,7 +30,7 @@
 
   <div class="container">
 
-  <div class="m-3 p-3 title">
+  <div class="title">
     <h1>The Intelligent Investor</h1>
     <div class="author">本杰明·葛拉汉 (Benjamin Graham, 1894--1976) 著<br>Jason Zweig 注解</div>
   </div>
