--- a/books/shakespeare/macbeth/mac.html
+++ b/books/shakespeare/macbeth/mac.html
@@ -27,7 +27,7 @@
 
   <div class="container">
 
-    <div class="m-3 p-3 title">
+    <div class="title">
       <h1>Macbeth</h1>
       <div class="author">William Shakespeare</div>
     </div>
