--- a/books/songci_300/s300.html
+++ b/books/songci_300/s300.html
@@ -27,7 +27,7 @@
 
   <div class="container">
 
-  <div class="m-3 p-3 title">
+  <div class="title">
     <h1>宋词三百首</h1>
     <div class="author">朱孝臧编选 刘乃昌评注</div>
   </div>
