--- a/books/tangshi_300/t300.html
+++ b/books/tangshi_300/t300.html
@@ -24,7 +24,7 @@
 
   <div class="container">
 
-  <div class="m-3 p-3 title">
+  <div class="title">
     <h1>唐诗三百首</h1>
     <div class="author">孙洙编 陈婉俊补注 宋慧点校</div>
   </div>
