--- a/go/res.html
+++ b/go/res.html
@@ -25,7 +25,7 @@
   <header class="navbar navbar-expand-md navbar-light bg-light"></header>
 
   <div class="container">
-    <div class="m-3 p-3 title">
+    <div class="title">
       <h1>围棋资源</h1>
     </div>
 
