--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <div class="container">
 
-    <div class="m-5 p-5 title">
+    <div class="title">
       <h1>包太雷</h1>
       <div class="text-muted">Alpha Space</div>
     </div>
