--- a/books/books.html
+++ b/books/books.html
@@ -30,7 +30,7 @@
   <header class="navbar navbar-expand-md navbar-light bg-light"></header>
 
   <div class="container">
-    <div class="m-5 p-5 title">
+    <div class="title">
       <h1>包太雷书架</h1>
     </div>
     
