--- a/books/dickens/bleak_house/bh.html
+++ b/books/dickens/bleak_house/bh.html
@@ -27,7 +27,7 @@
 
   <div class="container">
 
-  <div class="m-3 p-3 title">
+  <div class="title">
     <h1>Bleak House</h1>
     <div class="author">Charles Dickens (1812--1870)</div>
   </div>
