--- a/books/dickens/two_cities/ttt.html
+++ b/books/dickens/two_cities/ttt.html
@@ -27,7 +27,7 @@
 
   <div class="container">
 
-  <div class="m-3 p-3 title">
+  <div class="title">
     <h1>A Tale of Two Cities</h1>
     <div class="author">Charles Dickens</div>
   </div>
