--- a/books/random_walk/rw.html
+++ b/books/random_walk/rw.html
@@ -27,7 +27,7 @@
 
   <div class="container">
 
-  <div class="m-3 p-3 title">
+  <div class="title">
     <h1>A Random Walk Down Wall Street</h1>
     <div class="author">波顿·麦基 (Burton G. Malkiel, 1932--?)</div>
   </div>
