--- a/books/sapiens/sapiens.html
+++ b/books/sapiens/sapiens.html
@@ -27,7 +27,7 @@
 
   <div class="container">
 
-  <div class="m-3 p-3 title">
+  <div class="title">
     <h1>Sapiens</h1>
     <div class="text-muted">A Brief History of Humankind</div>
     <div class="author">Yuval Noah Harari (1976--)</div>
