--- a/life/life.html
+++ b/life/life.html
@@ -28,7 +28,7 @@
   <header class="navbar navbar-expand-md navbar-light bg-light"></header>
 
   <div class="container">
-    <div class="m-5 p-5 title">
+    <div class="title">
       <h1>国计民生</h1>
       <div class="text-muted">更新中</div>
     </div>
