--- a/life/us_weather.html
+++ b/life/us_weather.html
@@ -27,7 +27,7 @@
   <header class="navbar navbar-expand-md navbar-light bg-light"></header>
 
   <div class="container">
-    <div class="m-3 p-3 title">
+    <div class="title">
       <h1>美国都市区气候排名</h1>
       <div class="author">包太雷</div>
     </div>
