add 三星 LG 春兰 围棋赛

--- a/books/intelligent_investor/ii.html
+++ b/books/intelligent_investor/ii.html
@@ -219,7 +219,7 @@
           [ 'Ruane',   '1970--1984', '17.2%', '10.0%' ]
         ]
       };
-      bao.util.datatable('grahams-returns-table', grahamReturns, {}, false);
+      bao.util.datatable('grahams-returns-table', grahamReturns, { ordering: false }, false);
 
     });
   </script>
