update notes of Wealth of Nations

--- a/books/wealth_nations/won.html
+++ b/books/wealth_nations/won.html
@@ -56,9 +56,9 @@
     </figcaption>
   </figure>
 
-  <p>这是近十年来我读得最艰难的一本书。首先十八世纪的英语对我来说比较难，不仅难于七八十年后的狄更斯，甚至难于 150 年前的莎士比亚。当然，拿经济学作品和文学作品比是不公平的。其次，此书涉及经济、政治、贸易、教育、伦理等，若非对 200 多年前英国、欧洲、美洲乃至亚洲的这些领域都比较熟悉，读起来就像天书。另外亚当·斯密的写作风格比较啰嗦，事无巨细都拿来讲，8 号字洋洋洒洒一千多页，依我看可以砍掉一多半。书全名是<em>An Inquiry into the Nature and Causes of the Wealth of Nations</em>，章节名多数也很长，那会儿英国上流社会可能都这风格。</p>
+  <p>这是近十年来我读得最艰难的一本书。首先十八世纪的英语对我来说比较难，不仅难于七八十年后的狄更斯，甚至难于 150 年前的莎士比亚。当然，拿经济学作品和文学作品比是不公平的。其次，此书涉及经济、政治、贸易、教育、伦理等，若非对 200 多年前英国、欧洲、美洲乃至亚洲的这些领域都比较熟悉，读起来就像天书。另外亚当·斯密的写作风格比较啰嗦，事无巨细都拿来讲，8 号字洋洋洒洒一千多页，依我看可以砍掉一多半。书全名是<em>An Inquiry into the Nature and Causes of the Wealth of Nations</em>，章节名多数也很长。常常会有一句话长达一页，中间真的没句号；或者一个段落长达几页，那会儿英国上流社会可能都这风格。</p>
 
-  <p>十几年前我家教授还在读博士做助教，她的一个学生毕业时留下这本书，兰登书屋 2000 年版。我数次试图读它，这次花来一年半总算囫囵吞枣。</p>
+  <p>十几年前我家教授还在读博士做助教，她的一个学生毕业时留下这本书，兰登书屋 2000 年版。我数次试图读它，这次花了一年半总算囫囵吞枣。</p>
 
   <p>斯密是一个遗腹子，母亲养大，一生未娶。印象中牛顿也是幼时丧父，外婆养大，一生未娶。两位都是开山立派的人物，牛顿早了 80 年。斯密生于苏格兰乡下，14 岁入格拉斯哥大学，17 岁入牛津大学研究生院。后任教于爱丁堡大学和格拉斯哥大学。40 岁辞去教职，随某富家子弟游学欧洲。三年后，雇主家庭变故，斯密回到家乡开始撰写此书。十年后《国富论》出版，一时洛阳纸贵，那是 1776 年。</p>
 
@@ -67,6 +67,10 @@
   <p>创普毕业于宾夕法尼亚大学商学院，估计他当年没好好读过祖师爷的作品，才会现在叫嚣着加关税。为这版作序的 Robert Reich 说，很多人都听说过此部巨著，也有不少人引用他，但是读过的很少。</p>
 
   <p>作者认为，国家之财富不取决于王公贵族的金银财宝，也不取决于于教会眼中的精神圣洁，而是在于人民大众为人民大众劳动生产出来的物品。振聋发聩啊！每个人的自利性会导致他做自己最擅长的事情，从而推动整个社会的发展。这就是看不见的手。</p>
+
+  <p>斯密认为多数情况下看不见的手会自动调节；马克思则认为总有调节不过来的时候，那就是资本主义经济危机；凯恩斯说，政府可以宏观调控。</p>
+
+  <p>美国民主党自小罗斯福以来都在搞政府干预、宏观调控。1930 年代，罗斯福用新政对付大萧条；2009 年，奥巴马用量化宽松对付次贷危机。但是这种政府干预会造成大量浪费，只能希望肉烂在锅里。共和党嘴上说不要，身体却很诚实，他们是用战争对付危机。里根的星球大战，老布什的海湾战争，小布什的伊拉克战争和阿富汗战争，创普正在或即将打的叙利亚和伊朗。</p>
 
   <h2 class="part">生产力进步和国民财富分配</h2>
 
