add KGS user guide

--- a/go/res.html
+++ b/go/res.html
@@ -35,6 +35,7 @@
     <h2>下棋网站</h2>
     <ul>
       <li><a href="https://gokgs.com">KGS（美国）</a></li>
+      <li><a href="kgs.html">KGS 使用说明</a></li>
       <li><a href="https://pandanet-igs.com">IGS（日本）</a></li>
       <li><a href="http://www.eweiqi.com">弈城（中国）</a></li>
     </ul>
