--- a/go/kgs.html
+++ b/go/kgs.html
@@ -18,7 +18,7 @@
     crossorigin="anonymous"></script>
   <script src="../nav.js"></script>
 
-  <title>KGS User Guide</title>
+  <title>KGS 使用说明</title>
 </head>
 
 <body>
