--- a/go/kgs.html
+++ b/go/kgs.html
@@ -18,7 +18,7 @@
     crossorigin="anonymous"></script>
   <script src="../nav.js"></script>
 
-  <title>KGS 使用说明</title>
+  <title>KGS User Guide</title>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
 
   <div class="container">
     <div class="title">
-      <h1>简明 KGS 指南</h1>
+      <h1>KGS 使用说明</h1>
     </div>
 
     <h2>下载安装</h2>
