add OGS, life and death

--- a/go/res.html
+++ b/go/res.html
@@ -24,7 +24,7 @@
 <body>
   <header class="navbar navbar-expand-md navbar-light bg-light"></header>
 
-  <div class="container">
+  <div class="container mb-5">
     <div class="title">
       <h1>围棋资源</h1>
     </div>
@@ -36,6 +36,7 @@
     <ul>
       <li><a href="https://gokgs.com">KGS（美国）</a></li>
       <li><a href="kgs.html">KGS 使用说明</a></li>
+      <li><a href="https://online-go.com">OGS（美国）</a></li>
       <li><a href="https://pandanet-igs.com">IGS（日本）</a></li>
       <li><a href="http://www.eweiqi.com">弈城（中国）</a></li>
     </ul>
@@ -58,7 +59,14 @@
         <a href="https://www.youtube.com/playlist?list=PLku534PwIYW0VtXbrS6EcaLAlPaHfjYO5">死活基础 37课 方天丰八段</a>
       </li>
     </ul>
-    
+
+    <h2>死活题</h2>
+    <ul>
+      <li><a href="https://online-go.com/puzzle/2824">赵治勋死活辞典 1--189</a></li>
+      <li><a href="https://online-go.com/puzzle/2824">赵治勋死活辞典 190--312</a></li>
+      <li><a href="https://www.101weiqi.com/book/1000/">101围棋网 死活1000题</a></li>
+    </ul>
+
   </div>
 
   <script>
