minor fixes on LOR

--- a/books/tolkien/lor.html
+++ b/books/tolkien/lor.html
@@ -23,7 +23,7 @@
 <body>
   <header class="navbar navbar-expand-md navbar-light bg-light"></header>
 
-  <div class="container">
+  <div class="container mb-5">
 
   <div class="title">
     <h1>The Lord of the Rings</h1>
@@ -105,7 +105,7 @@
 
   <h2 class="part">The Return of the King</h2>
 
-  <p>花分两朵，各表一枝。弗罗多和山姆发现并捉住一直跟踪他们的古鲁姆，要求他带路进莫多。古鲁姆把他们带入蜘蛛洞，大蜘蛛麻翻弗罗多。山姆打败蜘蛛，以为主人死了，就拿了戒指准备自己上路。半兽人发现弗罗多，带他到要塞望楼。山姆苦思办法救主。</p>
+  <p>花开两朵，各表一枝。弗罗多和山姆发现并捉住一直跟踪他们的古鲁姆，要求他带路进莫多。古鲁姆把他们带入蜘蛛洞，大蜘蛛麻翻弗罗多。山姆打败蜘蛛，以为主人死了，就拿了戒指准备自己上路。半兽人发现弗罗多，带他到要塞望楼。山姆苦思办法救主。</p>
 
   <p>甘道夫和皮平赶到刚铎都城，摄政王询问大儿子如何死的。未几，索隆大军压境，小儿子法拉密受重伤被甘道夫救回。摄政王说，甘道夫你也打不过戒灵之首吧。甘道夫说，走着瞧。</p>
     
