fix spelling error in mockingbird

--- a/books/mockingbird/mockingbird.html
+++ b/books/mockingbird/mockingbird.html
@@ -37,13 +37,13 @@
       </figcaption>
     </figure>
   
-    <p>今年早些时候，我的硕士导师贴了张知更鸟巢的照片，淡蓝色的鸟蛋特别漂亮。我提到这本书，朱老师说很好，应该读读。几年前一位小朋友离开加州上大学，留下一些书，其中就有这本。恕我愚昧，之前一直以为它和 <em>One Flew Over the Cuskoo's Nest</em> 是同一类型的。</p>
+    <p>今年早些时候，我的硕士导师贴了张知更鸟巢的照片，淡蓝色的鸟蛋特别漂亮。我提到这本书，朱老师说很好，应该读读。几年前一位小朋友离开加州上大学，留下一些书，其中就有这本。恕我愚昧，之前一直以为它和 <em>One Flew Over the Cuckoo's Nest</em> 是同一类型的。</p>
 
     <p>九月读完大部头魔戒，这个月就想找本薄点的放松一下，这本厚度正合适。开头非常轻松幽默，我甚至推荐孩子也看看。她们和我比赛着读，然后我看到审理强奸案。就只好跟她们说太黑暗了，秋菊才四年级，的确不合适。</p>
 
     <p>这本书从一个小学生的视角，描述了从她一年级开始的两年间的故事。斯考特幼年丧母，和爸爸阿提克斯还有哥哥杰姆生活在1930年代初的阿拉巴马小镇。 阿提克斯是一位律师，被法官指派为黑人青年汤姆辩护。在种族歧视严重的年代，为黑人说话就是堕落。戴眼镜的律师一幅儒雅形象，被镇上白人排挤甚至辱骂都不还击。 </p>
 
-    <p>有次兄妹俩用气枪打鸟时，律师说，<em>It's a sin to kill a morkingbird.</em> 因为知更鸟是益鸟，不偷吃庄稼也不骚扰人类。兄妹俩就以为律师不玩枪。然后某天镇上有只狗疑似狂犬病，警长说自己枪法不准，把长枪硬塞给律师，三十年没摸过枪的阿提克斯一击而中。邻居阿姨说，当年他的绰号就是 <em>One-shot Finch</em>。后来他戒枪是不想伤害生灵。</p>
+    <p>有次兄妹俩用气枪打鸟时，律师说，<em>It's a sin to kill a mockingbird.</em> 因为知更鸟是益鸟，不偷吃庄稼也不骚扰人类。兄妹俩就以为律师不玩枪。然后某天镇上有只狗疑似狂犬病，警长说自己枪法不准，把长枪硬塞给律师，三十年没摸过枪的阿提克斯一击而中。邻居阿姨说，当年他的绰号就是 <em>One-shot Finch</em>。后来他戒枪是不想伤害生灵。</p>
 
     <p>有一伙白人在审判之前的某晚想私刑处死汤姆，阿提克斯得知就守在镇拘留所前。兄妹俩偷偷在边上看，发现那伙人里面有律师的前客户，自己同学的爸爸，因为穷律师都没收他钱。斯考特就跑出去跟那人打招呼，他不好意思就招呼同伴离去。</p>
 
