--- a/books/mockingbird/mockingbird.html
+++ b/books/mockingbird/mockingbird.html
@@ -47,13 +47,13 @@
 
     <p>有一伙白人在审判之前的某晚想私刑处死汤姆，阿提克斯得知就守在镇拘留所前。兄妹俩偷偷在边上看，发现那伙人里面有律师的前客户，自己同学的爸爸，因为穷律师都没收他钱。斯考特就跑出去跟那人打招呼，他不好意思就招呼同伴离去。</p>
 
-    <p>审判时律师不让孩子去看，兄妹俩就偷偷挤到黑人旁听席，黑人因为律师仗义执言对他们一家都很尊敬。律师在庭审中揭露了真相，原告父亲是个醉鬼，19岁的胖女儿没朋友就经常找汤姆搭讪，并发展到勾引他。醉鬼看到大怒，因为那会儿白人跟黑人交往是羞耻。醉鬼狂扁女儿之后报警诬告汤姆。汤姆左臂残疾，根本不可能右手掐着女孩脖子，左上打她右脸。</p>
+    <p>审判时律师不让孩子去看，兄妹俩就偷偷挤到黑人旁听席，黑人因为律师仗义执言对他们一家都很尊敬。律师在庭审中揭露了真相，原告父亲是个醉鬼，19岁的胖女儿没朋友就经常找汤姆搭讪，并发展到勾引他。醉鬼看到大怒，因为那会儿白人跟黑人交往是耻辱。醉鬼狂扁女儿之后报警诬告汤姆。汤姆左臂残疾，根本不可能右手掐着女孩脖子，左手打她右脸。</p>
 
     <p>按说这庭审到这里就该结束，汤姆无罪释放。但是陪审团很无耻地认定他有罪，按当时阿拉巴马的法律应该死刑。律师说要上诉，但是汤姆失去信心，就在越狱时被击毙。</p>
 
     <p>镇上小报编辑下木虽然也歧视黑人，但很有正义感。那天晚上律师在拘留所一夫当关时，下木先生就在楼上端着双筒猎枪为律师助阵。汤姆被击毙后，下木说，<em>It was a sin to kill cripples, be they standing, sitting, or escaping.</em> 振聋发聩啊。</p>
 
-    <p>万圣节月黑风高，学校有表演。结束后斯考特和哥哥落在后面，摸黑回家。醉鬼尾随攻击，哥哥断臂，神秘邻居阿瑟救了他们。醉鬼中刀而死，律师认为可能是杰姆动的刀，警长认为是阿瑟。阿瑟小时候做坏事，被爸爸关了很多年，习惯隐居生活，小孩子都没见过他。为了不打扰阿瑟的宁静，警长说服律师，一致认为醉鬼在打斗中被树根绊倒，跌到刀上，恶贯满盈。</p>
+    <p>万圣节月黑风高，学校有表演。结束后斯考特和哥哥落在后面，摸黑回家。醉鬼尾随攻击，哥哥断臂，神秘邻居阿瑟救了他们。醉鬼中刀而死，律师认为可能是杰姆动的刀，警长认为是阿瑟。阿瑟小时候做坏事，被爸爸关了很多年，习惯隐居，小孩子都没见过他。为了不打扰阿瑟的宁静生活，警长说服律师，一致认为醉鬼在打斗中被树根绊倒，跌到刀上，恶贯满盈。</p>
 
     <figure class="text-center">
       <img class="figure-img img-fluid rounded" src="640px-Harper_Lee_Medal.jpg" alt="Presidential Medal of Freedom">
@@ -62,7 +62,7 @@
       </figcaption>
     </figure>
 
-    <p>哈勃·李只写过这一本书，但是一辈子能写这样一本也就值了。1960年出版，雄踞畅销书排行榜一年，得到普利策奖。2007年，小布什授予李总统自由勋章。</p>
+    <p>哈勃·李只写过这一本书，但是一辈子能写这样一本也就值了。1960年出版，雄踞畅销书排行榜一年，获普利策奖。2007年，小布什授予她总统自由勋章。</p>
   </div><!-- container -->
 
   <script>
