--- a/go/top8_xinao.html
+++ b/go/top8_xinao.html
@@ -22,7 +22,7 @@
   <script src="go.js"></script>
   <script src="top8_xinao.js"></script>
 
-  <title>历届新奥杯八强</title>
+  <title>首届新奥杯八强</title>
 </head>
 <body>
   <header class="navbar navbar-expand-md navbar-light bg-light"></header>
