--- a/go/top8_tianfu.html
+++ b/go/top8_tianfu.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -8,6 +7,7 @@
   <link rel="stylesheet" href="https://unpkg.com/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" 
       crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
   <link rel="stylesheet" href="../main.css">
 
   <script src="https://unpkg.com/jquery@3.5.1/dist/jquery.min.js"
@@ -16,26 +16,27 @@
   <script src="https://unpkg.com/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" 
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" 
       crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/vue@2.6.12/dist/vue.min.js"
-      integrity="sha384-cwVe6U8Tq7F/3JIj6xeDzOwuqeChcmRcdYqDGfoYmdAurw7L3f4dFHhEJKfxv96A"
-      crossorigin="anonymous"></script>
+  <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
   <script src="../nav.js"></script>
   <script src="../util.js"></script>
   <script src="go.js"></script>
+  <script src="top8_tianfu.js"></script>
 
-  <title>Go</title>
+  <title>首届天府杯八强</title>
 </head>
-
 <body>
   <header class="navbar navbar-expand-md navbar-light bg-light"></header>
 
   <div class="container">
     <div class="title">
-      <h1>围棋方圆</h1>
+      <h1>首届天府杯八强</h1>
+      <div class="author">阿黄</div>
     </div>
 
-    <div id="go-news" class="news-box">
-      <news-item v-for="item in news" :item="item" :key="item.title"></news-item>
+    <p>向天府公司致以崇高的敬意。</p>
+
+    <div class="datatable-wrapper" style="width: 800px">
+      <table id="top8-table" class="compact display"></table>
     </div>
 
   </div>
@@ -44,19 +45,9 @@
     $(() => {
       $('header.navbar').append(bao.nav.getNavbar('围棋', 1));
 
-      bao.util.initVue();
-      var goNews = new Vue({
-        el: '#go-news',
-        data: () => {
-          var news = bao.go.news.slice();
-          //bao.util.sortByProp(news, 'date', true);
-          news.forEach(e => {
-            e.url = `../${e.url}`;
-          });
-          return { news: news };
-        }
-      });
+      bao.util.datatable('top8-table', bao.go.tianfuTop8, { ordering: false }, false);
     });
   </script>
+
 </body>
 </html>
